--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');
+/*Fontes usadas: Lato, Inter e Oswald*/
 
 html {
     scroll-behavior: smooth;
@@ -26,7 +27,7 @@ header h3, footer h3{
     color: black;
     text-align: center;
     font-size: 1.5rem;
-    font-family: Lato;
+    font-family: Oswald;
     font-weight: 700;
 }
 
@@ -86,7 +87,7 @@ h1{
 p{
     color: white;
     font-size: 1.3rem;
-    font-family: Lato;
+    font-family: Inter;
     font-weight: 400;
 }
 
@@ -141,6 +142,10 @@ button{
     background-image: url('../images/imagemPublico.png');
 }
 
+.img5{
+    background-image: url('../images/imagemBeneficios.png');
+}
+
 .img6{
     background-image: url('../images/imagemSolucao.png');
 }
@@ -182,7 +187,7 @@ button{
     padding: 1vw 0.5vw;
     border-radius: 15px;
     color: white;
-    font-family: Lato;
+    font-family: Inter;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
 
