--- a/gs-webdev/css/style.css
+++ b/gs-webdev/css/style.css
@@ -360,10 +360,15 @@ color: #000;
 
 .quiz, .form {
 padding: 2rem;
-background-color: #111;
-margin: 2rem auto;
+background-color: rgb(72, 72, 243);
+color: white;
+font-family: Lato;
+margin: 5rem auto;
 border-radius: 10px;
+height: auto;
 max-width: 800px;
+display: flex;
+flex-direction: column;
 }
 
 .quiz h2, .form h2 {
@@ -375,6 +380,7 @@ margin-bottom: 1rem;
 #contact-form textarea {
 width: 100%;
 padding: 0.75rem;
+box-sizing: border-box;
 margin-bottom: 1rem;
 border: none;
 border-radius: 5px;
@@ -386,15 +392,19 @@ color: #fff;
 width: 100%;
 padding: 0.75rem;
 background-color: rgb(72, 72, 243);
-color: #000;
+color: #ffffff;
 font-weight: bold;
 border: none;
 border-radius: 5px;
 cursor: pointer;
 }
 
+#submit-quiz{
+background-color: rgb(9, 9, 59);
+}
+
 #contact-form button:hover, #submit-quiz:hover {
-background-color: rgb(72, 72, 243);
+background-color: rgb(0, 0, 0);
 }
 /* Estilos mínimos para quiz */
 .question-block {
@@ -428,24 +438,31 @@ background-color: rgb(72, 72, 243);
 .option-label span::before {
     content: "";
     display: inline-block;
-    transform: translateY(-10%);
+    transform: translateY(-5%);
     width: 16px;
     height: 16px;
     border: 2px solid #333;
     border-radius: 50%;
     background: white;
     vertical-align: middle;
+    margin-right: 5px;
 }
 /* Quando selecionado */
 .option-label input[type="radio"]:checked + span::before {
-    background: rgb(72, 72, 243);
-    border-color: rgb(72, 72, 243);
+    background: rgb(9, 9, 59);
+    border-color: rgb(9, 9, 59);
 }
 
-#slides{
-    width: 100%;
-    height: 100vh;
+#quiz-container{
+    color: white;
+}
+
+#contact-form {
     display: flex;
     flex-direction: column;
-    background-color: rosybrown;
+    width: 100%;
+}
+
+#mensagem {
+    resize: vertical;
 }
