--- a/gs-webdev/css/style.css
+++ b/gs-webdev/css/style.css
@@ -466,3 +466,12 @@ background-color: rgb(0, 0, 0);
 #mensagem {
     resize: vertical;
 }
+
+#menu{
+    height: 100%;
+    width: 2vw;
+    background-image: url(../images/iconeMenu.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
