--- a/gs-webdev/css/style.css
+++ b/gs-webdev/css/style.css
@@ -467,11 +467,63 @@ background-color: rgb(0, 0, 0);
     resize: vertical;
 }
 
-#menu{
+#menubotao{
     height: 100%;
     width: 2vw;
     background-image: url(../images/iconeMenu.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+#secaoMenu{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 10;
+    display: none;
+}
+
+#menu{
+    position: fixed;
+    width: 20vw;
+    height: 100%;
+    left: 80%;
+    background-color: white;
+    z-index: 11;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#menu ul{
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: right;
+    text-align: right;
+    gap: 2vw;
+}
+
+#menu ul li{
+    font-size: 1.5rem;
+    font-family: Lato;
+    color: rgb(0, 0, 0);
+}
+
+#menu ul li:hover{
+    color: rgb(72, 72, 243);
+}
+
+#sair{
+    background-color: rgb(72, 72, 243);
+    padding: 1rem;
+    font-size: 2vw;
+    font-weight: bolder;
+    font-family: Lato;
+    color: white;
+    border-radius: 15px;
 }
