--- a/gs-webdev/css/style.css
+++ b/gs-webdev/css/style.css
@@ -476,26 +476,18 @@ background-color: rgb(0, 0, 0);
     background-repeat: no-repeat;
 }
 
-#secaoMenu{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    z-index: 10;
-    display: none;
-}
-
 #menu{
     position: fixed;
     width: 20vw;
     height: 100%;
-    left: 80%;
-    background-color: white;
+    left: 120%;
+    background-color: rgb(233, 233, 233);
     z-index: 11;
-    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: 11;
+    transition: all 0.4s ease-in-out;
 }
 
 #menu ul{
@@ -528,7 +520,15 @@ background-color: rgb(0, 0, 0);
     border-radius: 15px;
 }
 
+#sair:hover{
+    background-color: rgb(9, 9, 59);
+}
+
 #menu div{
     font-family: Oswald;
-    margin-bottom: 3vw;
+    margin: 3vw auto; 
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
